KULRICE-3725 - committing merge of 1.0.1 into 1.0.x kc